meta-lead-ads-package/main/default/objects/Meta_Page__c/Meta_Page__c.object-meta.xml
<CustomObject>
    <label>Meta Page</label>
    <nameField>
        <label>Meta Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meta Page</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>