meta-lead-ads-package/main/default/objects/Meta_Page__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access Token</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>