meta-lead-ads-package/main/default/objects/Meta_Page__c/fields/Forms_Count__c.field-meta.xml
<CustomField>
    <fullName>Forms_Count__c</fullName>
    <label>Forms Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>