meta-lead-ads-package/main/default/objects/Meta_Page__c/fields/Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync__c</fullName>
    <label>Last Sync</label>
    <type>DateTime</type>
</CustomField>