meta-lead-ads-package/main/default/objects/Meta_Page__c/fields/Page_ID__c.field-meta.xml
<CustomField>
    <fullName>Page_ID__c</fullName>
    <externalId>true</externalId>
    <label>Page ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>