meta-lead-ads-package/main/default/objects/Meta_Page__c/fields/Page_Name__c.field-meta.xml
<CustomField>
    <fullName>Page_Name__c</fullName>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>